refactored class files, added .env

--- a/composer.json
+++ b/composer.json
@@ -3,11 +3,7 @@
     "type": "project",
     "autoload": {
         "psr-4": {
-            "Kris\\Floorplan\\": "src/",
-            "Kris\\Floorplan\\Application\\": "src/Application/",
-            "Kris\\Floorplan\\Infrastructure\\": "src/Infrastructure/",
-            "Kris\\Floorplan\\InterfaceAdapters\\": "src/InterfaceAdapters/"
-            
+            "Kris\\Floorplan\\": "src/"
         }
     },
     "authors": [
@@ -17,6 +13,7 @@
         }
     ],
     "require": {
-        "guzzlehttp/guzzle": "^7.8"
+        "guzzlehttp/guzzle": "^7.8",
+        "vlucas/phpdotenv": "^5.6"
     }
 }
